--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Blackwater Files</title>
 <style>
-  /* Interface générale */
   body, html { margin: 0; padding: 0; height: 100%; font-family: Arial, sans-serif; background: #000; color: #fff; }
   .interface { display: none; width: 100%; height: 100%; overflow: hidden; }
-  .interface.active { display: block; }
+  .interface.active { display: block; text-align: center; }
 
   /* Barre de statut du téléphone */
   #status-bar { display: flex; justify-content: space-between; padding: 5px 10px; background: #111; font-size: 14px; }
@@ -16,9 +15,9 @@
   /* Apps téléphone */
   .apps-container { display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; padding: 10px; }
   .app-button { font-size: 30px; width: 60px; height: 60px; border-radius: 15px; border: 1px solid #888; background-color: #222; cursor: pointer; color: #fff; }
-  
+
   /* Conteneur contenu apps */
-  #app-container, #desk-content, #computer-content { margin-top: 10px; height: calc(100% - 100px); overflow-y: auto; padding: 10px; text-align: center; }
+  #app-container, #desk-content, #computer-content { margin-top: 10px; height: calc(100% - 130px); overflow-y: auto; padding: 10px; text-align: center; }
 
   /* Bureau et ordinateur icônes */
   .desk-icons, .computer-icons { display: flex; gap: 15px; justify-content: flex-start; padding: 10px; }
@@ -26,12 +25,35 @@
 
   /* Transition jour */
   #transition-jour { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; display:flex; justify-content:center; align-items:center; flex-direction:column; font-size:24px; z-index:1000; }
+
+  /* Intro */
+  #intro { display: none; width:100%; height:100%; background:#000; color:#fff; text-align:center; }
+  #intro.active { display: flex; justify-content:center; align-items:center; flex-direction:column; padding:20px; }
+  #intro button { font-size:24px; padding:15px 30px; border:2px solid #888; background:#222; color:#fff; border-radius:8px; cursor:pointer; margin-top:20px; }
+
+  /* Flèches navigation */
+  #nav-arrows { position: absolute; bottom: 10px; width: 100%; display:flex; justify-content: space-between; padding: 0 20px; font-size: 30px; opacity:0.5; }
+  #nav-arrows span { cursor:pointer; user-select:none; }
 </style>
 </head>
 <body>
 
+<!-- Écran d’intro -->
+<div id="intro" class="interface active">
+  <h1>🕯️ Blackwater Files 🕯️</h1>
+  <p>Bienvenue dans l’enquête. Vous êtes sur le point de découvrir des secrets cachés.</p>
+  <p>Objectifs :</p>
+  <ul style="text-align:left;max-width:300px;margin:auto;">
+    <li>Collecter les indices</li>
+    <li>Résoudre les mini-jeux</li>
+    <li>Découvrir la vérité sur Blackwater</li>
+  </ul>
+  <p>⚠️ Attention : le jeu comporte 3 fins différentes !</p>
+  <button id="iniziateBtn">INIZIATE</button>
+</div>
+
 <!-- Téléphone -->
-<div id="phone" class="interface active">
+<div id="phone" class="interface">
   <div id="status-bar">
     <span id="time">12:00</span>
     <span id="network">📶</span>
@@ -57,9 +79,9 @@
 <!-- Bureau -->
 <div id="desk" class="interface">
   <div class="desk-icons">
-    <button class="desk-app" onclick="openDeskApp('journal')">📒</button>
-    <button class="desk-app" onclick="openDeskApp('clues')">🔍</button>
-    <button class="desk-app" onclick="openDeskApp('files')">📂</button>
+    <button class="desk-app" onclick="openDeskApp('journal')">📒 Journal</button>
+    <button class="desk-app" onclick="openDeskApp('clues')">🔍 Indices</button>
+    <button class="desk-app" onclick="openDeskApp('files')">📂 Fichiers</button>
   </div>
   <div id="desk-content"></div>
 </div>
@@ -74,20 +96,50 @@
   <div id="computer-content"></div>
 </div>
 
+<!-- Flèches navigation -->
+<div id="nav-arrows">
+  <span id="prev-arrow">⬅️</span>
+  <span id="next-arrow">➡️</span>
+</div>
+
 <!-- Transition jour -->
 <div id="transition-jour" style="display:none;"></div>
 
 <script>
-/* Gestion interface et swipe */
-let currentInterface = 'phone';
-function showInterface(name){document.querySelectorAll('.interface').forEach(d=>d.classList.remove('active'));document.getElementById(name).classList.add('active');currentInterface=name;}
-let startX=0;
-document.addEventListener("touchstart", e=>startX=e.touches[0].clientX);
-document.addEventListener("touchend", e=>{let endX=e.changedTouches[0].clientX;if(endX-startX>50) swipeLeft();else if(startX-endX>50) swipeRight();});
-function swipeLeft(){if(!jourTerminé){alert("Finissez les indices avant de passer !");return;}if(currentInterface==='phone') showInterface('desk');else if(currentInterface==='desk') showInterface('computer');}
-function swipeRight(){if(!jourTerminé){alert("Finissez les indices avant de passer !");return;}if(currentInterface==='computer') showInterface('desk');else if(currentInterface==='desk') showInterface('phone');}
+/* --- INTRO --- */
+const intro=document.getElementById('intro');
+document.getElementById('iniziateBtn').addEventListener('click',()=>{
+  intro.classList.remove('active');
+  showInterface('phone');
+  afficherTransitionJour();
+});
 
-/* Mini-jeux variés */
+/* --- INTERFACES --- */
+let currentInterface='phone';
+function showInterface(name){
+  document.querySelectorAll('.interface').forEach(d=>d.classList.remove('active'));
+  document.getElementById(name).classList.add('active');
+  currentInterface=name;
+}
+
+/* --- FLÈCHES NAVIGATION --- */
+const prevArrow=document.getElementById('prev-arrow');
+const nextArrow=document.getElementById('next-arrow');
+let jourTerminé=false;
+
+prevArrow.addEventListener('click',()=>{
+  if(!jourTerminé){alert("Finissez les indices avant de changer d'interface !"); return;}
+  if(currentInterface==='computer') showInterface('desk');
+  else if(currentInterface==='desk') showInterface('phone');
+});
+
+nextArrow.addEventListener('click',()=>{
+  if(!jourTerminé){alert("Finissez les indices avant de changer d'interface !"); return;}
+  if(currentInterface==='phone') showInterface('desk');
+  else if(currentInterface==='desk') showInterface('computer');
+});
+
+/* --- MINI-JEUX --- */
 const miniJeux=[
   function jeuSymboles(){alert("Mini-jeu symboles à résoudre");},
   function jeuPuzzle(){alert("Mini-jeu puzzle image");},
@@ -99,20 +151,26 @@ const miniJeux=[
 ];
 function lancerMiniJeu(){const i=Math.floor(Math.random()*miniJeux.length);miniJeux[i]();afficherJourActuel();}
 
-/* Jour et indices */
+/* --- JOUR ET INDICES --- */
 let jourActuel=1;
-let jourTerminé=false;
 let indicesCollectes=0;
 const indicesTotal=10;
-function collecterIndice(){indicesCollectes++;if(indicesCollectes>=indicesTotal){finirJour();}}
-
-function finirJour(){jourTerminé=true;afficherTransitionJour();}
-
-function afficherTransitionJour(){const overlay=document.getElementById('transition-jour');overlay.style.display='flex';overlay.innerHTML=`<h2>Jour ${jourActuel}</h2><p>Préparez-vous pour les prochaines enquêtes</p>`;setTimeout(()=>{overlay.style.display='none';jourActuel++;jourTerminé=false;indicesCollectes=0;},2000);}
-
+function collecterIndice(){indicesCollectes++; if(indicesCollectes>=indicesTotal){finirJour();}}
+function finirJour(){jourTerminé=true; afficherTransitionJour();}
+function afficherTransitionJour(){
+  const overlay=document.getElementById('transition-jour');
+  overlay.style.display='flex';
+  overlay.innerHTML=`<h2>Jour ${jourActuel}</h2><p>Préparez-vous pour les prochaines enquêtes</p>`;
+  setTimeout(()=>{
+    overlay.style.display='none';
+    jourActuel++;
+    jourTerminé=false;
+    indicesCollectes=0;
+  },2000);
+}
 function afficherJourActuel(){console.log("Jour "+jourActuel);}
 
-/* Apps téléphone */
+/* --- APPS TÉLÉPHONE --- */
 function openApp(app){
   const container=document.getElementById('app-container');
   switch(app){
@@ -132,11 +190,11 @@ function openApp(app){
   }
 }
 
-/* Bureau et ordinateur */
+/* --- BUREAU ET ORDINATEUR --- */
 function openDeskApp(app){document.getElementById('desk-content').innerHTML=`<p>${app} ouvert sur le bureau</p>`;}
 function openComputerApp(app){document.getElementById('computer-content').innerHTML=`<p>${app} ouvert sur l’ordinateur</p>`;}
 
-/* Bloc des 100 jours - exemple simplifié, tu peux rajouter tous les textes et mini-jeux */
+/* --- BASE DES 100 JOURS --- */
 const jours={};
 for(let i=1;i<=100;i++){jours[i]=[`Jour ${i} : message principal`, `Mini-jeu : résoudre un indice`];}
 </script>
