--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ for(let i=1;i<=100;i++){jours[i]=[`Jour ${i} : message principal`, `Mini-jeu : r
 </html>
 const jours = {
   1: [
-    "Bienvenue dans Blackwater…",
+    "Bienvenue dans la petite ville de Blackwater…",
     "Votre enquête commence maintenant.",
     "Vous recevez un message inconnu :",
     "Evan Cross : 'Ils nous observent depuis toujours…'",
